# nanochat

./: .gitattributes  README.md
bootstrap/: runtime.js
jizzrug/: manifest.jizz  parser.jizz  source_model.jizz  transpiler.jizz
nanochat/: checkpoint_manager.py  common.py  dataloader.py  engine.py  optim.py
rizz/: bootstrap.jizz  cli.jizz
scripts/: base_train.py  chat_web.py
squirt/: flush.jizz  stream.jizz
test/: runtime.test.js
tools/: fetch_arxiv_tex.py  make_dataset.py
tools/dataview/: Cargo.toml
tools/dataview/src/: main.rs
